# immo-agent

./: .env.example  .gitignore  QUICKSTART.md  README.md  STRUCTURE.md  add_gps_columns.py  agent_memory.py  api.py  api_auth.py  check_setup.py  cookies.txt  cookies_mistral.txt  cookies_test.txt  csv_to_sqlite.py  docker-compose.yaml  geolocalize.py  geolocalize_cities.py  init_and_run.py  main.py  pyproject.toml  requirements.txt  runIA.py  view_db.py  weather_mcp.py
app/: main.py
app/core/: templating.py
app/routers/: IA_chat.py  connexion.py
app/services/: agent.py  data_ia_simple.py  user_db_simple.py
app/static/: conversations.js  script.js  style.css  style_connect.css  style_conversations.css
app/templates/: chat.html  connexion.html  conversation.html  inscription.html  user_conversations.html
config/: __init__.py  settings.py
documentation/: benchmark projIA.md  note-cadrage projIA.md
exploration/: explo_mcp.py  explo_mcp2.py  explo_mcp_full.py  explograph.py  explograph2.py  explotools.py
frontend/: auth.js  index.html  script.js  style.css
immo_agent/: __init__.py  agent_memory.py  api.py  api_auth.py  check_setup.py  csv_to_sqlite.py  db_session.py  init_and_run.py  main.py  runIA.py  test_mcp.py
scripts/: __init__.py  run_api.py  run_cli.py
tests/: __init__.py
